Bug 420740 - adding of inline images broken
Summary: adding of inline images broken
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.14.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 420788 421585 421647 421839 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-29 07:06 UTC by Andreas Kohlbecker
Modified: 2020-05-21 19:21 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.1
Sentry Crash Report:


Attachments
mbox file of broken email (135.82 KB, application/mbox)
2020-04-29 07:06 UTC, Andreas Kohlbecker
Details
mbox file of fixed email (135.86 KB, application/mbox)
2020-04-29 07:07 UTC, Andreas Kohlbecker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kohlbecker 2020-04-29 07:06:36 UTC
Created attachment 127975 [details]
mbox file of broken email

SUMMARY

When adding an inline image to a HTML (rich text) email the image is missing in the send email. Instead an placeholder icon is shown.

STEPS TO REPRODUCE

1. create new rich text email
2. paste an image from the clipboard to the email content and choose "add as linine image" or use the "Add image" function from the toolbar.
3. Send the image

OBSERVED RESULT

The image in the recipients inbox and that which has been copied into the send folder do not show the inline image.


DIAGNOSIS

The image is attached correctly to the email but he <IMG> tag is not added to the html code. 

A broken message can be fixed:
1. save as mbox file (see attached file image-mail-2-pub.mbox)
2. add the missing img tag with the cid of the attachment (image-mail-2-fixed-pub.mbox)


SOFTWARE/OS VERSIONS

Operating System: KDE neon 5.18
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Kernel Version: 5.3.0-51-generic
OS Type: 64-bit
Comment 1 Andreas Kohlbecker 2020-04-29 07:07:07 UTC
Created attachment 127976 [details]
mbox file of fixed email
Comment 2 Laurent Montel 2020-04-29 11:25:02 UTC
I confirm it
Comment 3 Laurent Montel 2020-04-29 12:03:00 UTC
Bug found.
I need to backport to 5.14.1 I will do it soon.
Thanks for bug report
Comment 4 Laurent Montel 2020-04-29 12:05:32 UTC
Git commit de50cca49e1b4c9eb9675f0d5dd69c0dcbfd0b93 by Laurent Montel.
Committed on 29/04/2020 at 12:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 420740 - adding of inline images broken

Need to backport to 5.14 branch

M  +1    -1    CMakeLists.txt
M  +4    -1    messagecomposer/src/composer-ng/richtextcomposerng.cpp

https://commits.kde.org/messagelib/de50cca49e1b4c9eb9675f0d5dd69c0dcbfd0b93
Comment 5 Laurent Montel 2020-04-30 04:54:45 UTC
Git commit 3cd2dac6eb5c62faf1f05561011fb7954f57dd70 by Laurent Montel.
Committed on 30/04/2020 at 04:54.
Pushed by mlaurent into branch 'release/20.04'.

Fix Bug 420740 - adding of inline images broken

Need to backport to 5.14 branch

(cherry picked from commit de50cca49e1b4c9eb9675f0d5dd69c0dcbfd0b93)

M  +1    -1    CMakeLists.txt
M  +4    -1    messagecomposer/src/composer-ng/richtextcomposerng.cpp

https://commits.kde.org/messagelib/3cd2dac6eb5c62faf1f05561011fb7954f57dd70
Comment 6 Laurent Montel 2020-04-30 10:16:12 UTC
*** Bug 420788 has been marked as a duplicate of this bug. ***
Comment 7 Wolfgang Bauer 2020-05-17 07:15:25 UTC
*** Bug 421647 has been marked as a duplicate of this bug. ***
Comment 8 Wolfgang Bauer 2020-05-17 07:17:40 UTC
*** Bug 421585 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2020-05-21 19:21:15 UTC
*** Bug 421839 has been marked as a duplicate of this bug. ***