Fix Bug 420740 - adding of inline images broken

BUG: 420740

Need to backport to 5.14 branch

(cherry picked from commit de50cca49e1b4c9eb9675f0d5dd69c0dcbfd0b93)